fix: ensures that the unit title is truncated properly and doesn't overflow

--- a/paragon/_exemplar.scss
+++ b/paragon/_exemplar.scss
@@ -30,6 +30,11 @@
         }
       }
     }
+    ol li div {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
     li > div.pgn_collapsible {
       margin-bottom: 0 !important;
       padding: var(--pgn-spacing-spacer-2) var(--pgn-spacing-spacer-4);
